--- a/index.Rmd
+++ b/index.Rmd
@@ -6,114 +6,52 @@ output:
    toc_float: true
 ---
 
-# LICH
+## LICH
+### Wednesdays 2:00
+[Zoom Link](https://zoom.us/j/600116955)
 
-## Wednesdays 2:00
-
-[Session 1: 4/8/20](https://zoom.us/j/3094028153)
-
-[Session 2: 4/15/20](https://zoom.us/j/3094028153)
-
-[Session 3: 4/22/20](https://zoom.us/j/3094028153)
-
-[Session 4: 4/29/20](https://zoom.us/j/3094028153)
-
-[Session 5: 5/6/20](https://zoom.us/j/3094028153)
-
-[Session 6: 5/13/20](https://zoom.us/j/3094028153)
-
-[Session 7: 5/20/20](https://zoom.us/j/3094028153)
-
-[Session 8: 5/27/20](https://zoom.us/j/3094028153)
-
-[Session 9: 6/3/20](https://zoom.us/j/3094028153)
+#### Sesion Dates
+* Apr 8, 2020 02:00 PM
+* Apr 15, 2020 02:00 PM
+* Apr 22, 2020 02:00 PM
+* Apr 29, 2020 02:00 PM
+* May 6, 2020 02:00 PM
+* May 13, 2020 02:00 PM
+* May 20, 2020 02:00 PM
+* May 27, 2020 02:00 PM
+* Jun 3, 2020 02:00 PM
 
 
-# HEHE
 
-## Thursdays 3:00
+## HEHE
+### Thursdays 3:00
+[Zoom Link](https://zoom.us/j/109660826)
 
-[Session 1: 4/9/20](https://zoom.us/j/3094028153)
-
-[Session 2: 4/16/20](https://zoom.us/j/3094028153)
-
-[Session 3: 4/23/20](https://zoom.us/j/3094028153)
-
-[Session 4: 4/30/20](https://zoom.us/j/3094028153)
-
-[Session 5: 5/7/30](https://zoom.us/j/3094028153)
-
-[Session 6: 5/14/20](https://zoom.us/j/3094028153)
-
-[Session 7: 5/21/20](https://zoom.us/j/3094028153)
-
-[Session 8: 5/28/20](https://zoom.us/j/3094028153) 
-
-[Session 9: 6/4/20](https://zoom.us/j/3094028153)
+#### Session Dates
+* Apr 9, 2020 03:00 PM
+* Apr 16, 2020 03:00 PM
+* Apr 23, 2020 03:00 PM
+* Apr 30, 2020 03:00 PM
+* May 7, 2020 03:00 PM
+* May 14, 2020 03:00 PM
+* May 21, 2020 03:00 PM
+* May 28, 2020 03:00 PM
+* Jun 4, 2020 03:00 PM
 
 
-# PRGE
 
-## Wednesdays 4:00 
-
-[Initial Consult: 4/8/20](https://zoom.us/j/3094028153)
-
-[Session 2: 4/15/20](https://zoom.us/j/3094028153)
-
-[Session 3: 4/22/20](https://zoom.us/j/3094028153)
-
-[Session 4: 4/29/20](https://zoom.us/j/3094028153)
-
-[Session 5: 5/6/20](https://zoom.us/j/3094028153)
-
-[Session 6: 5/13/20](https://zoom.us/j/3094028153)
-
-[Session 7: 5/20/20](https://zoom.us/j/3094028153)
-
-[Session 8: 5/27/20](https://zoom.us/j/3094028153)
-
-[Session 9: 6/3/20](https://zoom.us/j/3094028153)
+## PRGE
+### Wednesdays 4:00 
+[Initial Consultation Zoom Link](https://zoom.us/j/515564429)
 
 
-# DRKAT 
 
-## Thursdays 1:00 
-
-[Initial Consult: 4/9/20](https://zoom.us/j/3094028153)
-
-[Session 2: 4/16/20](https://zoom.us/j/3094028153)
-
-[Session 3: 4/23/20](https://zoom.us/j/3094028153)
-
-[Session 4: 4/30/20](https://zoom.us/j/3094028153)
-
-[Session 5: 5/7/30](https://zoom.us/j/3094028153)
-
-[Session 6: 5/14/20](https://zoom.us/j/3094028153)
-
-[Session 7: 5/21/20](https://zoom.us/j/3094028153)
-
-[Session 8: 5/28/20](https://zoom.us/j/3094028153)
-
-[Session 9: 6/4/20](https://zoom.us/j/3094028153)
+## DRKAT 
+### Thursdays 1:00 
+[Initial Consultation Zoom Link](https://zoom.us/j/126729794)
 
 
-# CHMAR
 
-## Thursdays 11:00
-
-[Initial Consult: 4/16/20](https://zoom.us/j/3094028153)
-
-[Session 2: 4/23/20](https://zoom.us/j/3094028153)
-
-[Session 3: 4/30/20](https://zoom.us/j/3094028153)
-
-[Session 4: 5/7/30](https://zoom.us/j/3094028153)
-
-[Session 5: 5/14/20](https://zoom.us/j/3094028153)
-
-[Session 6: 5/21/20](https://zoom.us/j/3094028153)
-
-[Session 7: 5/28/20](https://zoom.us/j/3094028153)
-
-[Session 8: 6/4/20](https://zoom.us/j/3094028153)
+## CHMAR
+### Thursdays 11:00
+[Initial Consultation Zoom Link](https://zoom.us/j/745275753)
