--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ output:
 
 ## LICH
 ### Wednesdays 2:00
-[Zoom Link](https://zoom.us/j/600116955)
+[Zoom Link](https://zoom.us/j/600116955?pwd=SlM0cU13dnZtcDR6dkRXakRvRC9rdz09)
 
 #### Password
 268003
@@ -29,7 +29,7 @@ output:
 
 ## HEHE
 ### Thursdays 3:00
-[Zoom Link](https://zoom.us/j/109660826)
+[Zoom Link](https://zoom.us/j/109660826?pwd=Z0JSNjVCTkNZU3doenNUK3NCQ1RCUT09)
 
 #### Password
 547577
@@ -49,21 +49,21 @@ output:
 
 ## PRGE
 ### Wednesdays 4:00 
-[Initial Consultation Zoom Link](https://zoom.us/j/515564429)
+[Initial Consultation Zoom Link](https://zoom.us/j/515564429?pwd=akFQMzFSWHZxS2VOajZBbWZhVWRlUT09)
 
 #### Password
 158705
 
 ## DRKAT 
 ### Thursdays 1:00 
-[Initial Consultation Zoom Link](https://zoom.us/j/126729794)
+[Initial Consultation Zoom Link](https://zoom.us/j/126729794?pwd=ZHRpcUo4dm0raS8vdkZkWXltWjVZQT09)
 
 #### Password
 607415
 
 ## CHMAR
 ### Thursdays 11:00
-[Initial Consultation Zoom Link](https://zoom.us/j/745275753)
+[Initial Consultation Zoom Link](https://zoom.us/j/745275753?pwd=UnR2YkZvRnZDZGdFTEZxY252NFZoUT09)
 
 #### Password
 049540
