PRGE sessions added

--- a/index.Rmd
+++ b/index.Rmd
@@ -27,6 +27,24 @@ output:
 
 
 
+## PRGE
+### Wednesdays 3:00
+[Zoom Link](https://zoom.us/j/129589622?pwd=SlY3RWRzQlVVQk1KbHpneDlneS8yUT09)
+
+#### Password
+074519
+
+#### Session Dates
+* Apr 15, 2020 03:00 PM
+* Apr 22, 2020 03:00 PM
+* Apr 29, 2020 03:00 PM
+* May 6, 2020 03:00 PM
+* May 13, 2020 03:00 PM
+* May 20, 2020 03:00 PM
+* May 27, 2020 03:00 PM
+
+
+
 ## HEHE
 ### Thursdays 3:00
 [Zoom Link](https://zoom.us/j/109660826?pwd=Z0JSNjVCTkNZU3doenNUK3NCQ1RCUT09)
@@ -46,13 +64,6 @@ output:
 * Jun 4, 2020 03:00 PM
 
 
-
-## PRGE
-### Wednesdays 4:00 
-[Initial Consultation Zoom Link](https://zoom.us/j/515564429?pwd=akFQMzFSWHZxS2VOajZBbWZhVWRlUT09)
-
-#### Password
-158705
 
 ## DRKAT 
 ### Thursdays 1:00 
