DANI added, CHMAR/HEHE removed

--- a/index.Rmd
+++ b/index.Rmd
@@ -46,41 +46,12 @@ output:
 
 
 
-## CHMAR
-### Thursdays 11:00
-[Zoom Link](https://zoom.us/j/98802116060?pwd=OFpqZmFaUlFaWWJwbW9wZFdjMUp5dz09)
+## DANI
+### Thursdays 12:00
+[Initial Consultation Zoom Link](https://zoom.us/j/92511044064?pwd=MzlGQjVvUXBVTWFBWm05ckZ2SDBIdz09)
 
 #### Password
-049540
-
-#### Session Dates 
-* Apr 23, 2020 11:00 AM
-* Apr 30, 2020 11:00 AM
-* May 7, 2020 11:00 AM
-* May 14, 2020 11:00 AM
-* May 21, 2020 11:00 AM
-* May 28, 2020 11:00 AM
-* Jun 4, 2020 11:00 AM
-
-
-
-## HEHE
-### Thursdays 3:00
-[Zoom Link](https://zoom.us/j/109660826?pwd=Z0JSNjVCTkNZU3doenNUK3NCQ1RCUT09)
-
-#### Password
-547577
-
-#### Session Dates
-* Apr 9, 2020 03:00 PM
-* Apr 16, 2020 03:00 PM
-* Apr 23, 2020 03:00 PM
-* Apr 30, 2020 03:00 PM
-* May 7, 2020 03:00 PM
-* May 14, 2020 03:00 PM
-* May 21, 2020 03:00 PM
-* May 28, 2020 03:00 PM
-* Jun 4, 2020 03:00 PM
+404559
 
 
 
