--- a/index.Rmd
+++ b/index.Rmd
@@ -48,10 +48,18 @@ output:
 
 ## DANI
 ### Thursdays 12:00
-[Initial Consultation Zoom Link](https://zoom.us/j/92511044064?pwd=MzlGQjVvUXBVTWFBWm05ckZ2SDBIdz09)
+[Zoom Link](https://zoom.us/j/97626227659?pwd=NVlEZUxCSHNhK3g1WnhUVnRqemh2QT09)
 
 #### Password
-404559
+287475
+
+#### Session Dates
+* Apr 30, 2020 12:00 PM
+* May 7, 2020 12:00 PM
+* May 14, 2020 12:00 PM
+* May 21, 2020 12:00 PM
+* May 28, 2020 12:00 PM
+* Jun 4, 2020 12:00 PM
 
 
 
