--- a/index.Rmd
+++ b/index.Rmd
@@ -72,7 +72,7 @@ output:
 
 
 
-## FOLA
+## FALO
 ### Wednesdays 4:00
 [Initial Consultation Zoom Link](https://zoom.us/j/93733698036?pwd=L2JwQ244UXpGVG0reWlNSEkyaE1sZz09)
 
