--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,22 @@ output:
    theme: "spacelab"
 ---
 
+## DRKAT
+### Mondays 1:30
+[Zoom Link](https://zoom.us/j/91081074132?pwd=VzNsbGtUVEdVVE9Ka1phN2VCdjY2Zz09)
+
+#### Password
+513983
+
+#### Session Dates
+* May 4, 2020 01:30 PM
+* May 11, 2020 01:30 PM
+* May 18, 2020 01:30 PM
+* May 25, 2020 01:30 PM
+* Jun 1, 2020 01:30 PM
+
+
+
 ## LICH
 ### Wednesdays 2:00
 [Zoom Link](https://zoom.us/j/600116955?pwd=SlM0cU13dnZtcDR6dkRXakRvRC9rdz09)
@@ -60,15 +76,6 @@ output:
 * May 21, 2020 12:00 PM
 * May 28, 2020 12:00 PM
 * Jun 4, 2020 12:00 PM
-
-
-
-## DRKAT 
-### Thursdays 1:00 
-[Initial Consultation Zoom Link](https://zoom.us/j/126729794?pwd=ZHRpcUo4dm0raS8vdkZkWXltWjVZQT09)
-
-#### Password
-607415
 
 
 
